fix(youtube): icons on dark mode, another menu label

--- a/styles/youtube/catppuccin.user.css
+++ b/styles/youtube/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name YouTube Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/youtube
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/youtube
-@version 3.5.3
+@version 3.5.4
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/youtube/catppuccin.user.css
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Ayoutube
 @description Soothing pastel theme for YouTube
@@ -505,6 +505,7 @@
     .ytp-panel-header,
     .ytp-panel-footer,
     .ytp-menuitem-label,
+    .ytp-premium-label,
     .ytp-menuitem-content,
     .ytp-menuitem-label-count,
     .ytp-menu-label-secondary {
@@ -1039,9 +1040,8 @@
       fill: @accent-color !important;
     }
 
-    [fill="white"],
-    [fill="#fff"] {
-      fill: @base !important;
+    [fill="white"] {
+      fill: if(@lookup = latte, @base, @text) !important;
     }
 
     ::-webkit-scrollbar {
